@@ -1,5 +1,13 @@
 Revision history for XML-Grammar-Fiction.
 
+        - Made sure XML-Grammar-Screenplay used
+        XML::Grammar::Fiction::ConfigData instead of 
+        XML::Grammar::Screenplay::ConfigData . This broke the installation
+        and tests on the following test reports:
+            - http://www.cpantesters.org/cpan/report/7167671
+            - http://www.cpantesters.org/cpan/report/7167759
+            - http://www.cpantesters.org/cpan/report/7167134
+        
 0.1.0       Mon Apr 26 19:25:55 IDT 2010
         - Merged in the XML-Grammar-Screenplay into this module.
         - Converted XML-Grammar-Screenplay to a non-procedurally-recursive
